# selvox

./: .gitignore  CLAUDE.md  README.md  index.html  netlify.toml  package.json  tsconfig.json  vite.config.ts  vite.demo.config.ts
demo/: main.ts
docs/: PRD_Voxel_WebSocket_Server.md  PRD_WebGPU_Voxel_Renderer.md  PRD_WebSocket_Client_Integration.md  Protocol_Voxel_WebSocket.md
server/: .gitignore  README.md  pyproject.toml
server/scripts/: download_dataset.py
server/tests/: test_protocol.py  test_voxelgrid.py
server/voxel_server/: __main__.py  ingest.py  noise.py  protocol.py  server.py  terrain.py  voxelgrid.py
src/: ChunkManager.ts  FlyCamera.ts  MockOctreeSource.ts  PerformanceOverlay.ts  TerrainSource.ts  VoxelRenderer.ts  index.ts  noise.ts  types.ts
src/gpu/: BlockAllocator.test.ts  BlockAllocator.ts  VoxelPool.ts  context.ts  math.ts
src/perf/: RingBuffer.ts
src/shaders/: bilateral.wgsl  blit.wgsl  cas.wgsl  cull.wgsl  taa_resolve.wgsl  voxel.wgsl  wgsl.d.ts
src/ws/: WebSocketVoxelSource.ts  codec.test.ts  codec.ts  types.ts
