[project]
name = "voxel-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "websockets>=14.0",
    "numpy>=2.0",
    "laspy[lazrs]>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
voxel-server = "voxel_server.__main__:main"
